Images Display Mobile Fix, footer_Fix_ and White Space block added

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -80,14 +80,20 @@
         font-weight: normal;
     }
     a:first-child {
-        margin: 0 16px 0 0;
+        margin: 0 8px 0 0;
     }
 
     picture img {
-        width: 20px;
-        height: auto;
+        width: 24px;
+        height: 24px;
         display: flex;
     }
+}
+
+.columns-container:has(.footersocial) .columns > div > div.columns-img-col a {
+    margin: 0 4px;
+    position: relative;
+    top: 5px;
 }
 
 .columns-container .columns.footersocial {
